--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:19.2.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.firebaseui:firebase-ui-storage:3.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
